# CPP_R-Type_2020

./: CMakeLists.txt  README.md  conanfile.txt  install.sh
client/: main.cpp
client/src/: Client.cpp  Client.hpp  Clock.cpp  Clock.hpp  Exception.hpp
client/src/Engine/: State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
client/src/Event/: event.cpp  event.hpp
client/src/Network/: TcpClient.cpp  TcpClient.hpp  UdpClient.cpp  UdpClient.hpp
client/src/Sprite/: findFolderSprites.cpp  getSprite.cpp  setAttackSprite.cpp  setBackSprite.cpp  setColisionSprite.cpp  setGameOverSprite.cpp  setHeroSprite.cpp  setMonsterSprite.cpp  setSprite.cpp  setStageObjectSpritesDown.cpp  setStageObstaclesSpritesUp.cpp  sprite.hpp
client/src/States/: GameState.cpp  GameState.hpp  LobbyState.cpp  LobbyState.hpp  MenuState.cpp  MenuState.hpp  OptionState.cpp  OptionState.hpp  SplashState.cpp  SplashState.hpp  WaitState.cpp  WaitState.hpp
client/src/Text/: setFont.cpp  setText.cpp  text.hpp
client/src/Window/: window.cpp  window.hpp
doc/: rfc421312.odt
server/: Clock.cpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Room.cpp  Room.hpp  Server.cpp  Server.hpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp  include.hpp  main.cpp
